<resources>
    <string name="app_name">iSafety</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="be_safe_with_us">Be Safe With Us</string>
    <string name="title_activity_patient_register">PatientRegisterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="medical_condition">Medical Condition</string>
    <string name="isafetylogo">iSafetyLogo</string>
    <string name="Instructions">Instructions</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Reports">Reports</string>
    <string name="Notifications">Notifications</string>
    <string name="Settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logodashboard">logoDashboard</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="logout">Logout</string>
    <string name="change_account_details">Change Account Details</string>
    <string name="change_payment_method">Change Payment Method</string>
    <string name="change_doctor">Change Doctor</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="report_problem">Report Problem</string>
    <string name="todo">TODO</string>
</resources>