<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/text_line_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/gothic"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/Settings"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/Change_acc_details_btn"
        android:text="@string/change_account_details"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@drawable/buttons"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFFFFF"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/change_payment_method_btn"
        android:text="@string/change_payment_method"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@drawable/buttons"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFFFFF"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/change_doctor_btn"
        android:text="@string/change_doctor"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@drawable/buttons"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFFFFF"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/emergency_contacts_btn"
        android:text="@string/emergency_contacts"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@drawable/buttons"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFFFFF"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/report_problem_btn"
        android:text="@string/report_problem"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@drawable/buttons"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFFFFF"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/logout"
        android:text="@string/logout"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:background="@drawable/buttons"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</FrameLayout>